--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -9,6 +9,9 @@
  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,7 +33,7 @@
 
         <!-- PAGE 1 : COVER -->
         <section class="page cover">
-            <img src="./asserts/image.png">
+            <img src="./asserts/image.jpg">
             <div class="overlay">
             </div>
         </section>
@@ -73,11 +76,54 @@
   <div class="accordion-section container mt-5">
     <div class="row g-4">
 
-      <!-- LEFT LIST -->
+      <!-- LEFT ACCORDION -->
       <div class="col-md-4">
-        <div class="left-list">
-          <div class="left-item">Knowledge Terms <span>⌄</span></div>
-          <div class="left-item">Vocabulary Terms <span>⌄</span></div>
+        <div class="accordion custom-left-accordion" id="leftAccordion">
+
+          <!-- Knowledge Terms -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#knowledgeTerms">
+                Knowledge Terms
+              </button>
+            </h2>
+            <div id="knowledgeTerms"
+                 class="accordion-collapse collapse"
+                 data-bs-parent="#leftAccordion">
+              <div class="accordion-body">
+                <ul>
+                  <li>Storm</li>
+                  <li>Tornado</li>
+                  <li>Hurricane</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- Vocabulary Terms -->
+          <div class="accordion-item mt-2">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#vocabularyTerms">
+                Vocabulary Terms
+              </button>
+            </h2>
+            <div id="vocabularyTerms"
+                 class="accordion-collapse collapse"
+                 data-bs-parent="#leftAccordion">
+              <div class="accordion-body">
+                <ul>
+                  <li>Forecast</li>
+                  <li>Atmosphere</li>
+                  <li>Meteorologist</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
@@ -88,8 +134,8 @@
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed"
-                data-bs-toggle="collapse"
-                data-bs-target="#q1">
+                      data-bs-toggle="collapse"
+                      data-bs-target="#q1">
                 Write what you already know about the Essential Question.
               </button>
             </h2>
@@ -103,8 +149,8 @@
           <div class="accordion-item mt-3">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed"
-                data-bs-toggle="collapse"
-                data-bs-target="#q2">
+                      data-bs-toggle="collapse"
+                      data-bs-target="#q2">
                 Write down some questions you have.
               </button>
             </h2>
@@ -161,7 +207,7 @@
         <h3>Big Storms<br>Throughout History</h3>
       </label>
 
-      <img src="./asserts/big stroms.png" alt="Big Storms">
+      <img src="./asserts/Big strom.png" alt="Big Storms">
 
       <p class="question">
         What were the worst tornadoes, hurricanes, and blizzards of all time?
@@ -196,41 +242,51 @@
 
   </div>
 </section>
-
 <!-- PAGE 4 -->
 <section class="page reading-log">
-
   <div class="container my-5">
 
-    <div class="d-flex align-items-center mb-3">
-      <span class="badge bg-warning text-dark me-2">INDEPENDENT READING</span>
-      <h4 class="fw-bold mb-0">
+    <!-- HEADER -->
+    <div class="reading-header mb-4">
+      <div class="reading-badge">INDEPENDENT READING</div>
+      <h2 class="reading-title">
         Read each day and record facts you’ve learned.
-      </h4>
+      </h2>
     </div>
 
+    <!-- TABLE -->
     <div class="table-responsive">
-      <table class="table table-bordered align-middle text-center">
-        <thead class="table-light">
+      <table class="reading-table">
+        <thead>
           <tr>
-            <th class="w-50 text-start">My Reading</th>
-            <th class="w-50 text-start">My Fascinating Facts</th>
+            <th>My Reading</th>
+            <th>My Fascinating Facts</th>
           </tr>
         </thead>
         <tbody>
-          <tr style="height:120px"><td></td><td></td></tr>
-          <tr style="height:120px"><td></td><td></td></tr>
-          <tr style="height:120px"><td></td><td></td></tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
         </tbody>
       </table>
     </div>
 
-    <div class="d-flex gap-2 mt-3">
+    <!-- BUTTONS -->
+    <div class="reading-actions mt-3">
       <button class="add-btn">
-        <i class="bi bi-plus-circle me-1"></i> Add
+        <i class="bi bi-plus-circle"></i> Add
       </button>
       <button class="remove-btn">
-        <i class="bi bi-dash-circle me-1"></i> Remove
+        <i class="bi bi-dash-circle"></i> Remove
       </button>
     </div>
 
@@ -283,12 +339,26 @@
 <section class="page storm-section py-5">
   <div class="container">
 
-    <!-- HEADING -->
+    <!-- HEADER -->
     <div class="row mb-5">
-      <div class="col-12 d-flex align-items-center gap-3">
-        <span class="badge bg-warning text-dark">APPRENTICE TEXT 1</span>
-        <img src="./asserts/Before and after the storm.png" alt="" class="section-heading mb-0">
-        <img src="./asserts/Frame 1984079008.png" alt="" class="section-heading mb-0">
+      <div class="col-12">
+
+        <!-- APPRENTICE TAG -->
+        <span class="badge apprentice-badge mb-2 d-inline-block">
+          APPRENTICE TEXT 1
+        </span>
+
+        <!-- TITLE + ICON -->
+        <div class="d-flex align-items-center gap-3 storm-header">
+          <img src="./asserts/Before and after the storm.png"
+               alt="Before and After the Storm"
+               class="storm-title-img">
+
+          <img src="./asserts/Frame 1984079008.png"
+               alt="Storm Icon"
+               class="storm-icon-img">
+        </div>
+
       </div>
     </div>
 
@@ -299,26 +369,17 @@
       <div class="col-md-6">
         <p class="numbered">
           <span>1</span>
-           Meteorologists are weather
-scientists. They observe weather
-patterns. They use tools to
-measure temperature, wind
-speed, and other conditions. They
-use these observations to predict,
-or forecast, weather. They can
-also use what they see to predict
-severe storms.
-        </p>
-
-        <p class="ms-4">
-                
+          Meteorologists are weather scientists. They observe weather patterns.
+          They use tools to measure temperature, wind speed, and other conditions.
+          They use these observations to predict, or forecast, weather.
+          They can also use what they see to predict severe storms.
         </p>
       </div>
 
       <!-- RIGHT IMAGE + CALLOUT -->
       <div class="col-md-6">
         <img src="./asserts/track a storm.png"
-             class="img-fluid rounded mb-3"
+             class="img-fluid rounded mb-2"
              alt="Track a storm">
 
         <p class="img-caption">
@@ -339,19 +400,9 @@ severe storms.
       <div class="col-md-6">
         <p class="numbered">
           <span>2</span>
-            Meteorologists are weather
-scientists. They observe weather
-patterns. They use tools to
-measure temperature, wind
-speed, and other conditions. They
-use these observations to predict,
-or forecast, weather. They can
-also use what they see to predict
-severe storms.
-        </p>
-
-        <p class="ms-4">
-                  
+          Severe storms have heavy winds. They may also have heavy precipitation,
+          such as rain or snow. These storms include tornadoes, hurricanes,
+          and blizzards. They are more likely in certain places and seasons.
         </p>
       </div>
 
@@ -385,44 +436,53 @@ severe storms.
     </ol>
   </div>
 
-  <!-- WORD LIST BAR -->
-  <div class="wordlist-bar">
+  <!-- WORD LIST BAR (ACCORDION TRIGGER) -->
+  <div class="wordlist-bar"
+       data-bs-toggle="collapse"
+       data-bs-target="#wordListContent"
+       role="button"
+       aria-expanded="false">
     <span>Word List</span>
     <i class="bi bi-chevron-down"></i>
   </div>
 
-  <!-- TABLE -->
-  <div class="table-responsive mt-3">
-    <table class="ba-table">
-      <thead>
-        <tr>
-          <th></th>
-          <th>Words per Minute</th>
-          <th>Date</th>
-          <th>Partner</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="label">Timed Reading 1</td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="label">Timed Reading 2</td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="label">Timed Reading 3</td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
+  <!-- COLLAPSIBLE CONTENT -->
+  <div id="wordListContent" class="collapse">
+
+    <!-- TABLE -->
+    <div class="table-responsive mt-3">
+      <table class="ba-table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Words per Minute</th>
+            <th>Date</th>
+            <th>Partner</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="label">Timed Reading 1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td class="label">Timed Reading 2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td class="label">Timed Reading 3</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
 
 </section>
